# adaptive-resume-generator

./: .coverage  .gitignore  ALEMBIC_SETUP.md  CLAUDE.md  CLAUDE_RESUMPTION_GUIDE.md  Commit-All.ps1  LICENSE  README.md  User Testing Notes 11-15-2025.txt  alembic.ini  pyproject.toml  requirements.txt  reset_data.py  run_gui.py  test_enhancement_services.py  test_models.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 1912d441f4d7_enforce_single_profile_design.py  271a28236056_add_resume_variant_support.py  30646f248885_add_coverletter_model_for_ai_generated_.py  49cc1707d9b9_enhance_job_applications_tracking.py  6691c13b20f9_add_selected_accomplishments_json_to_.py  7511b5df92b2_add_job_posting_metadata_fields.py  8482904c82bb_add_job_postings_and_tailored_resumes_.py  d8eaf3acb5a7_initial_schema_with_all_models.py  ece2da525316_add_soft_delete_support_to_jobs_and_.py
docs/: AI_SESSION_GUIDE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  MODELS_IMPLEMENTATION.md  PROJECT_PLAN.md  PYTEST_IMPLEMENTATION.md  README.md  SETUP.md  STATUS.md  ai_documentation_refactor_plan.md  documentation_end_state_spec.md
docs/architecture/: data_model.md  intelligence_pipeline.md  system_architecture.md
docs/decisions/: ADR-0001-technology-stack.md  ADR-0002-database-and-orm.md  ADR-0003-gui-framework.md  ADR-0004-pdf-generation.md  ADR-0005-nlp-matching-strategy.md
docs/design/: ui_complete_specification.md  ui_redesign_from_mockups.md  ui_redesign_requirements.md
docs/development/: delivery_plan.md  next_session_options.md  phase_3.5_completion.md  phase_3_6_resume_import_plan.md  phase_4_plan.md  phase_4_plan_revised.md  phase_5_resume_pdf_plan.md  phase_6_3_completion_summary.md  phase_6_3_testing_guide.md  phase_6_4_checkpoint.md  phase_6_4_complete.md  phase_6_advanced_features_plan.md  project_status_summary.md  session_summary_2025-11-13.md  setup_guide.md  status_report.md  testing_strategy.md  ui_improvements_phase_7.md  user_testing_fixes_11_15_2025.md
docs/product/: ai_session_guide.md  overview.md
docs/reference/: adr_index.md
src/adaptive_resume/: __init__.py  main.py
src/adaptive_resume/config/: __init__.py  settings.py
src/adaptive_resume/data/: cover_letter_templates.json  skills_database.json
src/adaptive_resume/gui/: __init__.py  database_manager.py  main_window.py  styles.py
src/adaptive_resume/gui/dialogs/: __init__.py  add_application_dialog.py  application_detail_dialog.py  bullet_enhancement_dialog.py  company_dialog.py  cover_letter_editor_dialog.py  education_dialog.py  job_dialog.py  job_import_dialog.py  job_preview_dialog.py  profile_dialog.py  recently_deleted_dialog.py  resume_import_dialog.py  resume_pdf_preview_dialog.py  resume_preview_dialog.py  resume_variants_dialog.py  settings_dialog.py  skill_dialog.py
src/adaptive_resume/models/: README.md  __init__.py  base.py  bullet_point.py  certification.py  cover_letter.py  education.py  generated_resume.py  job.py  job_application.py  job_posting.py  profile.py  skill.py  tag.py  tailored_resume.py  templates.py
src/adaptive_resume/pdf/: __init__.py  base_template.py  pdf_utils.py  template_registry.py
src/adaptive_resume/services/: __init__.py  ai_enhancement_service.py  application_tracking_service.py  bullet_enhancer.py  certification_service.py  cover_letter_generation_service.py  education_service.py  job_import_service.py  job_posting_parser.py  job_service.py  matching_engine.py  nlp_analyzer.py  profile_service.py  resume_extractor.py  resume_generator.py  resume_importer.py  resume_parser.py  resume_pdf_generator.py  resume_variant_service.py  skill_database_service.py  skill_service.py  tag_service.py
src/adaptive_resume/utils/: __init__.py  encryption.py
tests/: __init__.py  conftest.py
tests/fixtures/sample_job_postings/: encoding_test.txt  sample_job_posting.txt  simple_posting.txt  whitespace_test.txt
tests/fixtures/sample_resumes/: jane_smith_resume.txt  john_doe_resume.txt  minimal_resume.txt
tests/integration/: test_cover_letter_workflow.py  test_pdf_generation_e2e.py
tests/unit/: test_additional_templates.py  test_application_tracking_service.py  test_base_template.py  test_bullet_enhancer.py  test_bullet_point.py  test_certification_service.py  test_classic_template.py  test_cover_letter_generation_service.py  test_education_service.py  test_gui_dialogs.py  test_gui_main_window.py  test_job.py  test_job_import_service.py  test_job_posting_parser.py  test_job_service.py  test_main_window_tailored_resume.py  test_matching_engine.py  test_nlp_analyzer.py  test_pdf_utils.py  test_profile.py  test_profile_service.py  test_resume_extractor.py  test_resume_generator.py  test_resume_importer.py  test_resume_parser.py  test_resume_pdf_generator.py  test_resume_variant_service.py  test_skill_database_service.py  test_skill_service.py  test_tag_service.py
(+28 files in other folders)
