[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-resume"
version = "0.1.0"
description = "Adaptive Resume Generator - Create tailored resumes with intelligent matching"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AlobarQuest", email = "devon.watkins@gmail.com"}
]
keywords = ["resume", "cv", "job-application", "career"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

gui = [
    "PyQt6>=6.5.0",
]

pdf = [
    "reportlab>=4.0.0",
]

nlp = [
    "spacy>=3.6.0",
    "scikit-learn>=1.3.0",
]

all = [
    "adaptive-resume[dev,gui,pdf,nlp]",
]

[project.urls]
Homepage = "https://github.com/AlobarQuest/adaptive-resume-generator"
Repository = "https://github.com/AlobarQuest/adaptive-resume-generator"
Issues = "https://github.com/AlobarQuest/adaptive-resume-generator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["adaptive_resume*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=adaptive_resume --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
