[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-resume"
version = "0.1.0"
description = "Adaptive Resume Generator - Create tailored resumes with intelligent matching"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AlobarQuest", email = "devon.watkins@gmail.com"}
]
keywords = ["resume", "cv", "job-application", "career"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

gui = [
    "PyQt6>=6.5.0",
]

pdf = [
    "reportlab>=4.0.0",
]

nlp = [
    "spacy>=3.6.0",
    "scikit-learn>=1.3.0",
]

job-analysis = [
    "pypdf>=3.17.0",           # PDF parsing
    "python-docx>=1.1.0",      # DOCX parsing
    "spacy>=3.6.0",            # NLP analysis (shared with nlp)
    "scikit-learn>=1.3.0",     # Similarity scoring (shared with nlp)
    "anthropic>=0.7.0",        # Optional AI enhancement
    "requests>=2.31.0",        # HTTP requests for URL imports
    "beautifulsoup4>=4.12.0",  # HTML parsing for web scraping
    "chardet>=5.2.0",          # Character encoding detection
]

all = [
    "adaptive-resume[dev,gui,pdf,nlp,job-analysis]",
]

[project.urls]
Homepage = "https://github.com/AlobarQuest/adaptive-resume-generator"
Repository = "https://github.com/AlobarQuest/adaptive-resume-generator"
Issues = "https://github.com/AlobarQuest/adaptive-resume-generator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["adaptive_resume*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage reporting relies on the optional ``pytest-cov`` plugin. To keep the
# default test run usable in minimal environments where the plugin might not be
# installed, we do not force coverage options here. Developers can still request
# coverage explicitly via ``pytest --cov`` when the plugin is available.
# Disable pytest-randomly's resetting of random seeds to avoid conflicts with spacy/thinc
addopts = ["-ra", "--randomly-dont-reset-seed"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
